RESOLVED FIXED 241328
RemoteGraphicsContextGL autogeneration broken after 249754@main, 251204@main, 251325@main
https://bugs.webkit.org/show_bug.cgi?id=241328
Summary RemoteGraphicsContextGL autogeneration broken after 249754@main, 251204@main,...
Kimmo Kinnunen
Reported 2022-06-06 00:31:02 PDT
Fix RemoteGraphicsContextGL autogeneration after 249754@main, 251204@main
Attachments
Kimmo Kinnunen
Comment 1 2022-06-06 00:39:21 PDT
EWS
Comment 2 2022-06-06 06:43:03 PDT
Committed r295284 (251330@main): <https://commits.webkit.org/251330@main> Reviewed commits have been landed. Closing PR #1319 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-06-06 06:44:13 PDT
Note You need to log in before you can comment on or make changes to this bug.